incorperated a list of all the shelters

--- a/ShelterMap/app/src/main/res/layout/activity_account.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_account.xml
@@ -39,11 +39,11 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/Maps"
+        android:id="@+id/shelters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
-        android:text="Maps"
+        android:text="Shelters"
         app:layout_constraintBottom_toBottomOf="@+id/logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/logout" />
