made a page of the selected shelter's information

--- a/ShelterMap/app/src/main/res/layout/activity_account.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_account.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
         android:layout_marginTop="126dp"
-        android:text="Hello,"
+        android:text="Hello, "
         android:textSize="30sp"
+        app:layout_constraintEnd_toStartOf="@+id/insertUserName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,13 +31,14 @@
 
     <TextView
         android:id="@+id/insertUserName"
-        android:layout_width="229dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="25dp"
         android:text="insertUserName"
         android:textSize="30sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView" />
 
     <Button
         android:id="@+id/shelters"
