Made login look better

--- a/ShelterMap/app/src/main/res/layout/activity_account.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_account.xml
@@ -6,14 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
     tools:context="team31.cs2340.gatech.sheltermap.AccountActivity">
 
     <Button
         android:id="@+id/logout"
+        android:background="@drawable/button_border"
+        android:textColor="@color/text_icon"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Logout"
+        android:text="@string/logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
