--- a/ShelterMap/app/src/main/res/layout/list_shelters.xml
+++ b/ShelterMap/app/src/main/res/layout/list_shelters.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test"
-        android:textSize="13sp"
-        android:textColor="@color/primary_text"
+        android:textSize="18sp"
+        android:textColor="@color/text_icon"
         android:layout_gravity="center"/>
 </FrameLayout>
