--- a/ShelterMap/app/src/main/res/layout/activity_login.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_login.xml
@@ -183,4 +183,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/lockedOut"
+        android:layout_width="349dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="7dp"
+        android:text="lockedOut"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_red_light"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/error" />
+
 </android.support.constraint.ConstraintLayout>
