--- a/ShelterMap/app/src/main/res/layout/activity_login.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="84dp"
         android:text="@string/login"
         android:textColor="@color/text_icon"
         android:textSize="24sp"
@@ -135,14 +135,14 @@
         android:id="@+id/error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="116dp"
         android:text="Login Failed"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/guideline10"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline7"
@@ -176,24 +176,29 @@
         android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="21dp"
+        android:layout_marginTop="16dp"
         android:text="Forgot password?"
-        android:textColor="@color/wallet_holo_blue_light"
-        app:layout_constraintBottom_toTopOf="@+id/guideline12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/colorPrimaryLight"
+        app:layout_constraintEnd_toStartOf="@+id/guideline10"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/lockedOut"
         android:layout_width="349dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="7dp"
+        android:layout_height="19dp"
+        android:layout_marginBottom="24dp"
         android:text="lockedOut"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_light"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/error" />
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
