--- a/ShelterMap/app/src/main/res/layout/activity_forgot_password.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".ForgotPasswordActivity">
-
+<!--
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,9 +20,12 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_forgot_password" />
-
+-->
+    <include
+        layout="@layout/content_forgot_password"
+        android:layout_height="619dp"
+        tools:layout_editor_absoluteY="48dp" />
+<!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -29,5 +33,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
-
+-->
 </android.support.design.widget.CoordinatorLayout>
