Added button animations

--- a/ShelterMap/app/src/main/res/layout/content_forgot_password.xml
+++ b/ShelterMap/app/src/main/res/layout/content_forgot_password.xml
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="76dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_anim"
         android:text="Send"
         android:textColor="@color/text_icon"
         android:textStyle="bold"
@@ -89,7 +89,7 @@
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_purple"
+        android:background="@drawable/button_anim_cancel"
         android:text="@string/cancel"
         android:textColor="@color/text_icon"
         android:textStyle="bold"
