--- a/ShelterMap/app/src/main/res/layout/activity_login.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
         android:layout_marginBottom="88dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/button_purple"
+        android:background="@drawable/button_anim_cancel"
         android:text="@string/cancel"
         android:textColor="@color/text_icon"
         android:textStyle="bold"
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_anim"
         android:text="@string/submit"
         android:textColor="@color/text_icon"
         android:textStyle="bold"
