--- a/ShelterMap/app/src/main/res/layout/activity_welcome.xml
+++ b/ShelterMap/app/src/main/res/layout/activity_welcome.xml
@@ -30,7 +30,7 @@
         android:layout_width="147dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_anim"
         android:text="@string/sign_up"
         android:textColor="@color/text_icon"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_width="147dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/button_purple"
+        android:background="@drawable/button_anim_cancel"
         android:text="@string/login"
         android:textColor="@color/text_icon"
         android:textStyle="bold"
